# HermitRepo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  _group.yaml  build.common.gradle  build.dependencies.gradle  build.gradle  docker-compose.yml  gradle.properties  gradle_things.sh  gradlew.bat  local.properties  pre-commit  proguard-rules.pro
.github/: FUNDING.yml
FtcRobotController/: build.gradle  build.release.gradle
FtcRobotController/src/main/: AndroidManifest.xml
FtcRobotController/src/main/assets/: UltimateGoal.xml
FtcRobotController/src/main/assets/trajectory/: test path.yaml  untitled.yaml  untitled2.yaml
ProjectTomato/: CMakeLists.txt  Cargo.toml  rust-toolchain
ProjectTomato/ftc265-sys/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
ProjectTomato/src/: lib.cpp  lib.rs
ProjectTomato/tomato/: Cargo.toml
ProjectTomato/tomato/src/: lib.rs  telemetry.rs  util.rs
ProjectTomato/tomato/src/pipeline/: mod.rs  nop.rs
ProjectTomato/tomato/src/vision/: image_provider.rs  mod.rs
ProjectTomato/tomato/src/vision/opencv/: barcode_detect.rs  barcode_detect_split.rs  duck_detector.rs  example.rs  mod.rs
ProjectTomato/tomato/src/vision/tensorflow/: mod.rs
ProjectTomato/tomato_macros/: Cargo.toml
ProjectTomato/tomato_macros/src/: lib.rs
TeamCode/: build.gradle  build.release.gradle
TeamCode/src/main/assets/trajectory/: Blocks to Foundation.yaml  Foundation Approach.yaml  Foundation Pull to Blocks.yaml  Foundation Pull.yaml  PewPewTest.yaml  Scan Blocks.yaml  Test Path.yaml  _group.yaml  test2.yaml
TeamCode/src/main/java/org/hermitsocialclub/drive/: BaselineMecanumDrive.java  DriveConstants.java  EncoderMecanumDrive.java  SampleMecanumDrive.java  SampleTankDrive.java
TeamCode/src/main/java/org/hermitsocialclub/hydra/: HydraConfig.java  HydraRobot.java
TeamCode/src/main/java/org/hermitsocialclub/legacy/: AutoUtils.java  DataDump.java  IVuforiaEngine.java  PID.java  SkystoneVuforiaEngine.java  VuforiaConfig.java
TeamCode/src/main/java/org/hermitsocialclub/localizers/: MecanumLocalizerEVI.java  StandardTrackingWheelLocalizer.java  T265LocalizerRR.java  TwoWheelTrackingLocalizer.java
TeamCode/src/main/java/org/hermitsocialclub/pandemicpanic/: AnalogUltrasonicClassTestOp.java  ColorTestOp.java  GenericDetector.java  (+16 more)
buildSrc/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+284 files in other folders)
