[package]
name = "tomato"
version = "0.1.0"
authors = [
    "Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>",
    "Cayden Pocrass <caydenrp9@gmail.com>",
    "AdityaJain1030 <50159919+AdityaJain1030@users.noreply.github.com>"
]
edition = "2018"

[lib]
crate_type = ["staticlib", "dylib"]

[dependencies]
jni = "0.19.0"
# opencv = "0.54.0"