[package]
name = "ftc265-sys"
version = "0.1.0"
authors = [
    "Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>",
    "Cayden Pocrass <caydenrp9@gmail.com>",
    "AdityaJain1030 <50159919+AdityaJain1030@users.noreply.github.com>"
]
edition = "2021"

[lib]

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.70"